# hate2d

./: .gitmodules  CMakeLists.txt  README.md  RELEASE-MAP.md  build.rb  build.sh  main.lua
.scripts/: replace_text.rb
cmake/: CoreDeps.cmake  Deps.cmake
docs/: all.rst
font/: jetbrainsmono_regular.c
include/hate2d/: bindings.h  circle.h  color.h  font.h  graphics.h  image.h  lua.h  ruby.h  runtime.h  state.h  str.h  text.h  util.h  window.h
src/: bindings.c  circle.c  color.c  font.c  graphics.c  image.c  lua.c  main.c  ruby.c  runtime.c  state.c  text.c  util.c  window.c
test/src/: main.lua  main.rb
